objects/Opportunity.object
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Height__c</fullName>
        <label>Height</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Radius__c</fullName>
        <label>Radius</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commission__c</fullName>
        <description>Calculates sales rep commission of 10 percent when opportunity is won.</description>
        <formula>IF( ISPICKVAL( StageName , &quot;Closed Won&quot;) , Amount * 0.1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sales rep commission when opportunity is won.</inlineHelpText>
        <label>Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cylinder_Volume__c</fullName>
        <formula>3.14 * ( Radius__c  *  Radius__c  )  *  Height__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cylinder Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contribution_Level__c</fullName>
        <formula>IF ( Contribution_Percentage__c  &lt;= 0.1, &quot;Low&quot;, IF (AND(Contribution_Percentage__c  &gt; 0.1,Contribution_Percentage__c &lt; 0.4), &quot;Medium&quot;,&quot;High&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contribution Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Type,&quot;&quot;), 0,20) + IF( LEN( TEXT(MONTH(CloseDate))) = 0, 0,20) + IF( Amount &lt;= 0, 0,20) + IF( ISPICKVAL( LeadSource,&quot;&quot;), 0,20) + IF( LEN(NextStep)=0, 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Contact_Made__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Contact Made</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Annual_Revenue__c</fullName>
        <description>Displays the account annual revenue on an opportunity</description>
        <formula>Account.AnnualRevenue</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Annual Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Delivery_Schedule_Date__c</fullName>
        <label>Delivery Schedule Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contribution_Percentage__c</fullName>
        <formula>ExpectedRevenue / 1000000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contribution Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Opportunity Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Type ,&quot;&quot;),&quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( TEXT(MONTH(CloseDate))) = 0, &quot;Close Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( Amount &lt;= 0, &quot;Amount, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( LeadSource,&quot;&quot;), &quot;Lead Source, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(NextStep)=0, &quot;Next Steps&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Meeting_Scheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Meeting Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <validationRules>
        <fullName>Close_Date_Alert</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT( IsClosed ) , CloseDate &lt; TODAY())</errorConditionFormula>
        <errorMessage>The close date must be today or later (we won’t check this)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Delivery_Schedule_14_Days_Or_Less</fullName>
        <active>true</active>
        <description>Sets end date for initial delivery</description>
        <errorConditionFormula>ISPICKVAL(StageName , &quot;Closed Won&quot;) &amp;&amp; ( Delivery_Schedule_Date__c 
 -  CloseDate ) &gt; 14</errorConditionFormula>
        <errorDisplayField>Delivery_Schedule_Date__c</errorDisplayField>
        <errorMessage>Dates of type delivery must be no later than 14 days after close date</errorMessage>
    </validationRules>
</CustomObject>